Fix - Thumbnail size on mobile phone.

--- a/src/scss/_components/skin/_skin.scss
+++ b/src/scss/_components/skin/_skin.scss
@@ -516,6 +516,9 @@
       border: 5px solid $c-white;
       box-shadow: 0 2px 10px 2px rgba($c-black, 0.15);
       @extend %radialGradientOrange;
+      @include adaptive(767) {
+        min-height: 0;
+      }
       @include adaptive(575) {
         max-width: 100%;
       }
